--- a/practice/index.html
+++ b/practice/index.html
@@ -8,16 +8,21 @@
 </head>
 
 <body>
-    <!--見出しを書きます-->
     <h1><span style="color: red;">天才エンジニア</span>の技術ブログ</h1>
     <hr>
+
+    <div>
     <h2>メニュー</h2>
-    <p><small>TOP</small></p>
-    <p><small>記事ご覧ください</small></p>
-    <p><small>お問合せ</small>です</p>
+    <p>TOP</p>
+    <p>記事ご覧ください</p>
+    <p>お問合せ</p>
+    </div>
+    
+    <div>
     <h2>技術ブログご覧ください</h2>
     <p><small>Javaの新しいバージョンが出ました</small></p>
     <p><small>HTMLの意味とは</small></p>
+    </div>
 
 </body>
 
