--- a/lesson/ex1/index.html
+++ b/lesson/ex1/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <a href="#info">お問合せにスクールします</a>
     <!--見出しを書きます-->
     <h1>こんにちは</h1>
     <h2>今日は</h2>
@@ -49,8 +50,31 @@
     </div>
 
     <!--相対パス-->
-    <img src="img/obake.png" alt="1" width="50px" height="50">
-    <img src="img/gaikotsu.png" alt="1" width="50px" height="50">
+    <a><img src="img/obake.png" alt="1" width="50px" height="50"></a>
+    <a><img src="img/gaikotsu.png" alt="1" width="50px" height="50"></a>
+
+    <a href="https://style.potepan.com/articles/18401.html" target="_blank">クリックしてください</a>
+    <a href="lesson2.html"　target="_blank">lesson2に飛びます</a>
+    <br>
+    <br>
+    <br>
+    <p id="info">お問合せ</p>
+
+    <!--リストの-->
+    <ul>
+        <li><a href="https://style.potepan.com/articles/18401.html" title="_blank">A</a>
+        <li>B</li>
+        <li>C</li>
+        <li>D</li>
+    </ul>
+
+    <ol>
+        <li>A</li>
+        <li>B</li>
+        <li>C</li>
+        <li>D</li>
+    </ol>
+
 </body>
 
 </html>
