--- a/practice/register.html
+++ b/practice/register.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Register</h1>
     <form action="register.html " method="post"></form>
 
-    <label for="name">Username:</label>
-    <input type="text" required placeholder="名前を入力してください">
-    <br>
-
-    <label for="password">Password:</label>
-    <input type="text" required placeholder="パスワードを入力してください">
-    <br>
-
-    <label for="mail">Username:</label>
-    <input type="text" required placeholder="メールを入力してください">
-    <br>
-
-    <button>登録</button>
+    <div>
+        <label for="name">Username:</label>
+        <input type="text" required placeholder="名前を入力してください">
+        <br>
+        <label for="password">Password:</label>
+        <input type="text" required placeholder="パスワードを入力してください">
+        <br>
+        <label for="mail">Username:</label>
+        <input type="text" required placeholder="メールを入力してください">
+        <br>
+        <button>登録</button>
+    </div>
 
 </body>
+
 </html>
