--- a/cssPractice/homepage/index.html
+++ b/cssPractice/homepage/index.html
@@ -6,33 +6,40 @@
     <title>Document</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Noto+Sans+JP&family=Yuji+Hentaigana+Akari&display=swap" 
+          rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li>ホーム</li>
-                <li>記事一覧</li>
-                <li class="last">お問合せ</li>
+                <li><a href="https://www.google.com/" target="_blank">ホーム</a></li>
+                <li><a href="https://www.google.com/" target="_blank">記事一覧</a></li>
+                <li class="last" ><a href="https://www.google.com/" target="_blank">お問合せ</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <h1>ブログ記事一覧</h1>
-        <div class="blog-contens">
+        <div class="blog-contents">
             
             <div class="blog">
-                <a href="https://www.google.com/" title="_blank"><img src="CSS.jpg" alt="山"></a>
+                <a href="">
+                    <img src="CSS.jpg" alt=""></a>
                     <p class="last-text">これは記事の内容になります</p>
             </div>
 
             <div class="blog">
-                <a href="https://www.google.com/" title="_blank"><img src="CSS.jpg" alt="山"></a>
+                <a href="">
+                    <img src="CSS.jpg" alt=""></a>
                     <p class="last-text">これは記事の内容になります</p>
             </div>
 
             <div class="blog">
-                <a href="https://www.google.com/" title="_blank"><img src="CSS.jpg" alt="山"></a>
+                <a href="">
+                    <img src="CSS.jpg" alt=""></a>
                     <p class="last-text">これは記事の内容になります</p>
             </div>
              
